k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bullseye-buddy
  namespace: default
  labels:
    app.kubernetes.io/name: bullseye-buddy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bullseye-buddy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bullseye-buddy
    spec:
      containers:
        - name: web
          image: docker.io/ztsyed/bullseye-buddy:0.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              cpu: 20m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bullseye-buddy-data
