k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bullseye-buddy
  namespace: default
  labels:
    app.kubernetes.io/name: bullseye-buddy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bullseye-buddy
  ports:
    - name: http
      port: 80
      targetPort: http
