k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bullseye-buddy
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
spec:
  ingressClassName: nginx
  rules:
    - host: bullseye.ziasyed.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bullseye-buddy
                port:
                  name: http
  tls:
    - hosts:
        - bullseye.ziasyed.com
      secretName: bullseye-ziasyed-com-tls
